<resources>
    <string name="app_name">SmartNap</string>
    <string name="extraKey_alarm">extraKey_alarm</string>
    <string name="extraKey_cards">extraKey_cards</string>
    <string name="key_alarmName">alarmName</string>
    <string name="label_setNewAlarm">Save</string>
    <string name="label_addFlashCard">Add Flash Card</string>
    <string name="label_addAlarm">Add Alarm</string>
    <string name="label_saveCardChoices">Add Selected</string>
    <string name="label_deleteAlarm">Delete</string>
    <string name="label_currentCardList">Current Flash Cards:</string>
    <string name="header_editAlarm">Edit Alarm</string>
    <string name="header_createAlarm">Create Alarm</string>
    <string name="header_editFlashCard">Edit FlashCard</string>
    <string name="header_createFlashCard">Create FlashCard</string>
    <string name="inputAlarmName">Name</string>
    <string name="create_new_question">Create New Question</string>
    <string name="edit_myquestion">Edit MyQuestion</string>
    <string name="QuestionSet">MyQuestionSet</string>
    <string name="save">Save</string>
    <string name="answer">Answer:</string>
    <string name="clear">Clear</string>
    <string name="new_question">Question Submission</string>
    <string name="question">Question?</string>
    <string name="classid">Class</string>
    <string name="flashcard">Flashcard</string>
    <string name="flashcard_answer">flashcard answer</string>
    <string name="title_activity_alarm_dialog">AlarmDialog</string>
    <string name="empty"> </string>
    <string name="DEFAULT_flashCardQuestionText">This Will be the Question</string>
    <string name="silence_alarm">Silence Alarm</string>
    <string name="DEFAULT_flashCardAnswerText">This Will be the Answer</string>
    <string name="dialog_AlarmName">Alarm Name</string>
    <string name="next_question">Next Question</string>
    <string name="textview">TextView</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_the_pop_up_window">This is the pop-up window</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="questions">Questions</string>
    <string name="name">Name</string>
    <string name="delete">Delete</string>
    <string name="successsave">FlashCard has been made!</string>
    <string name="failsave">ERROR: Can\'t save FlashCard!</string>
</resources>
